test: extend BookingSystem tests for getAvailableRooms and cancelBooking edge cases